--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>nu.nerd</groupId>
     <artifactId>NerdUsage</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
 
 
     <repositories>
@@ -22,12 +22,13 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.9-R0.1-SNAPSHOT</version>
+            <version>1.12-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.1</version>
+            <groupId>nu.nerd</groupId>
+            <artifactId>BukkitEbean</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
@@ -56,15 +57,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.2</version>
-                <configuration>
-                    <minimizeJar>true</minimizeJar>
-                    <relocations>
-                        <relocation>
-                            <pattern>com.google.gson</pattern>
-                            <shadedPattern>nu.nerd.nerdusage.libs.com.google.gson</shadedPattern>
-                        </relocation>
-                    </relocations>
-                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -72,13 +64,12 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <shadedArtifactAttached>false</shadedArtifactAttached>
-                            <shadedClassifierName>Bundle</shadedClassifierName>
-                            <artifactSet>
-                                <includes>
-                                    <include>com.google.code.gson:gson:jar:*</include>
-                                </includes>
-                            </artifactSet>
+                            <relocations>
+                                <relocation>
+                                    <pattern>nu.nerd.BukkitEbean</pattern>
+                                    <shadedPattern>nu.nerd.NerdUsage.BukkitEbean</shadedPattern>
+                                </relocation>
+                            </relocations>
                         </configuration>
                     </execution>
                 </executions>
